# xian-stable-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
contracts/: committee.s.py  governance_compat.s.py  members_compat.s.py  members_harness.s.py  oracle.s.py  protocol_governance.s.py  psm.s.py  savings.s.py  stable_token.s.py  vaults.s.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md
scripts/: bootstrap_protocol.py
tests/: conftest.py  test_governance.py  test_oracle.py  test_psm.py  test_savings.py  test_stable_token.py  test_vaults.py
