[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-stable-protocol"
version = "0.1.0"
description = "A Xian-native overcollateralized stable-vault reference protocol."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["xian-tech-contracting>=1.0.1,<2"]

[dependency-groups]
dev = ["pytest>=9.0.2,<10", "ruff>=0.15.6,<0.16"]
deploy = ["xian-tech-py>=0.4.11,<0.5"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py312"
exclude = ["contracts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv.sources]
xian-tech-contracting = { path = "../xian-contracting", editable = true }
xian-tech-py = { path = "../xian-py", editable = true }
